# Field-Plotter

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  README.org  cmake_install.cmake  compile_commands.json  debug.sh  meson.build  release  run.sh  window-design.ui
include/fieldplotter/: Debug.h  chargesystem.h  commonheaders.h  computation.h  fieldlines.h  fieldplotter.h  graphics.h  plottable.h  plottermath.h  point_operators.inl  scene.h  vectorfield.h  vectors.h
include/fieldplotter/computation/: vectorfield.h
include/fieldplotter/graphics/: Arrow.h  Assets.h  Camera.h  Renderer.h  Shaders.h
src/: CMakeLists.txt  Debug.h  Field_Plotter.cpp  Field_Plotter.h
src/computation/: vectorfield.cpp  vectorfield.h
src/fieldplotter/: CMakeLists.txt  Makefile  canvas.cpp  canvas.h  chargebox.cpp  chargebox.h  cmake_install.cmake  core.h  event.h  fieldplotter.cpp  fieldplotter.h  glcontext.cpp  glcontext.h  glcontext.test.cpp  graphmanager.cpp  graphmanager.h  main-test.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  meson.build  optionswindow.cpp  optionswindow.h  optionswindow.ui  renderer.h  scene.h  test.test.cpp  thread.cpp  thread.h  useroptions.cpp  useroptions.h  window.cpp  window.h  window.test.cpp  windowevent.h
src/fieldplotter/components/: charge.h  fieldlines.cpp  fieldlines.h  space.h
src/fieldplotter/debug/: main-mandelbrot.cpp
src/fieldplotter/event/: event.h  windowevent.h
src/fieldplotter/graphics/: arrow.h  buffer.cpp  buffer.h  camera.cpp  drawable.h  glcontext.cpp  glcontext.h  glgraphics.cpp  glgraphics.h  graphics.cpp  graphics.h  lines.cpp  lines.h  pen.cpp  pen.h  program.cpp  program.h  renderer.cpp  renderer.h  shaders.h  vao.h
src/fieldplotter/physics/: electrostatics.cpp  electrostatics.h
src/fieldplotter/simulation/: simulation.cpp  simulation.h
src/fieldplotter/util/: logging.cpp  logging.h  macro.h  math.h  vectors.h
src/file/: CMakeLists.txt
src/graphics/: AssetLoader.h  Assets.cpp  Assets.h  Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  ShaderLoader.h  Shaders.h
src/gui/: GraphicsCanvas.cpp  GraphicsCanvas.h  MainWindow.cpp  MainWindow.h
src/libfieldplotter/: CMakeLists.txt  Camera.cpp  Debug.h  Makefile  Options.cpp  chargesystem.cpp  chargesystem.h  cmake_install.cmake  computation.cpp  computation.h  concurrentqueue.cpp  concurrentqueue.h  dynamicobject.cpp  dynamicobject.h  fieldlines.cpp  fieldlines.h  fieldplotter_pch.h  graphics.cpp  graphics.h  meson.build  physicalobject.cpp  physicalobject.h  physics.cpp  physics.h  plottable.h  plottermath.h  point_operators.inl  scene.cpp  scene.h  vectorfield.cpp  vectorfield.h
src/libfieldplotter/common/: LICENSE.md  atomicops.h
src/libfieldplotter/components/: chargesystem.cpp  chargesystem.h  debugsphere.cpp  debugtriangle.cpp  debugtriangle.h  dynamicobject.h  fieldlines.cpp  fieldlines.h  plottable.cpp  plottable.h
src/libfieldplotter/computation/: Makefile  chargesystem.cpp  cmake_install.cmake  computation.cpp  physics.cpp  physics.h  plottermath.h  vectorfield.cpp
src/libfieldplotter/file/: Makefile  cmake_install.cmake
src/libfieldplotter/graphics/: Arrow.cpp  Arrow.h  CMakeLists.txt  Camera.cpp  Camera.h  Makefile  Models.cpp  Renderer.cpp  Renderer.h  Scene.cpp  Shaders.h  attribute.h  bufferobject.cpp  bufferobject.h  camera.cpp  cmake_install.cmake  curve.cpp  curve.h  drawable.h  fieldlines.cpp  graphics.cpp  graphics.h  line.cpp  line.h  model.cpp  model.h  plottable.cpp  renderer.cpp  renderer.h  scene.cpp  scene.h  sceneuniforms.h  shaders.h
src/libfieldplotter/graphics/graveyard/: Shaders.h  scene.cpp
src/libfieldplotter/graphics/old_code/: graphics.cpp  plottable.cpp
src/libfieldplotter/old_code/components/: debugsphere.h  debugtriangle.h  dynamicobject.cpp  scene.cpp  scene.h
src/libfieldplotter/old_code/computation/: computation.h  physics.cpp  plottermath.cpp  point_operators.inl
src/libfieldplotter/rendering/: context.h  frame.cpp  frame.h
src/old_libfieldplotter/: main.cpp
src/old_libfieldplotter/components/: debugtriangle.cpp
src/old_libfieldplotter/computation/: computation.cpp
src/old_libfieldplotter/graphics/: buffers.h  camera.h  model.h  sceneuniforms.cpp  shader.h
src/testing/: CMakeLists.txt  attributetest.cpp  modeltest.cpp  tests.cpp
subprojects/: glew.wrap
test/libfieldplotter/: main.cpp  meson.build  test.cpp
test/libfieldplotter/graphics/: curve.test.cpp  line.test.cpp  scene.test.cpp
