fieldplotter_sources = [
'main.cpp'
]

fieldplotter = executable('fieldplotter',
fieldplotter_sources, dependencies: [
                      glew_dep,gl_dep,glfw_dep
]

)

# foolib = shared_library('foo',
#                         foo_sources,
#                         include_directories : inc,
#                         dependencies : glib_dep,
#                         install : true)
